更改了温馨提示的英文表示

--- a/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/ScalingQC/frmQC.en.resx
+++ b/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/ScalingQC/frmQC.en.resx
@@ -1217,6 +1217,6 @@
     <value>No information can not be printed!</value>
   </data>
   <data name="reminder" xml:space="preserve">
-    <value>Kind reminder</value>
+    <value>Tips</value>
   </data>
 </root>
