--- a/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmRunInfoModify.en.resx
+++ b/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmRunInfoModify.en.resx
@@ -117,169 +117,38 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="label2.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <data name="Position.HeaderText" xml:space="preserve">
+    <value>Position</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="label2.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
+  <data name="SampleNo.HeaderText" xml:space="preserve">
+    <value>Sample Number</value>
+  </data>
+  <data name="SampleType.HeaderText" xml:space="preserve">
+    <value>Sample Type</value>
+  </data>
+  <data name="ItemName.HeaderText" xml:space="preserve">
+    <value>Project Name</value>
+  </data>
+  <data name="DilutionTimes.HeaderText" xml:space="preserve">
+    <value>Dilution Ratio</value>
+  </data>
+  <data name="Emergency.HeaderText" xml:space="preserve">
+    <value>Emergency</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="label2.Location" type="System.Drawing.Point, System.Drawing">
-    <value>40, 47</value>
+  <data name="txtDilutionTimes.Location" type="System.Drawing.Point, System.Drawing">
+    <value>98, 29</value>
   </data>
   <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>59, 12</value>
-  </data>
-  <data name="label2.TabIndex" type="System.Int32, mscorlib">
-    <value>26</value>
+    <value>95, 12</value>
   </data>
   <data name="label2.Text" xml:space="preserve">
-    <value>试剂位置:</value>
+    <value>Fixed Dilution:</value>
   </data>
-  <data name="&gt;&gt;label2.Name" xml:space="preserve">
-    <value>label2</value>
+  <data name="cmbDilutionTimes.Location" type="System.Drawing.Point, System.Drawing">
+    <value>264, 29</value>
   </data>
-  <data name="&gt;&gt;label2.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;label2.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;label2.ZOrder" xml:space="preserve">
-    <value>6</value>
-  </data>
-  <data name="txtRegentPos.Enabled" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="txtRegentPos.Location" type="System.Drawing.Point, System.Drawing">
-    <value>106, 43</value>
-  </data>
-  <data name="txtRegentPos.Size" type="System.Drawing.Size, System.Drawing">
-    <value>97, 21</value>
-  </data>
-  <data name="txtRegentPos.TabIndex" type="System.Int32, mscorlib">
-    <value>27</value>
-  </data>
-  <data name="txtRegentPos.TextAlign" type="System.Windows.Forms.HorizontalAlignment, System.Windows.Forms">
-    <value>Center</value>
-  </data>
-  <data name="&gt;&gt;txtRegentPos.Name" xml:space="preserve">
-    <value>txtRegentPos</value>
-  </data>
-  <data name="&gt;&gt;txtRegentPos.Type" xml:space="preserve">
-    <value>BioBaseCLIA.CustomControl.userTextBoxBase, BioBaseCLIA, Version=1.0.0.1, Culture=neutral, PublicKeyToken=null</value>
-  </data>
-  <data name="&gt;&gt;txtRegentPos.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;txtRegentPos.ZOrder" xml:space="preserve">
-    <value>7</value>
-  </data>
-  <data name="cmbDiuPos.Items" xml:space="preserve">
-    <value>样本稀释液一</value>
-  </data>
-  <data name="cmbDiuPos.Items1" xml:space="preserve">
-    <value>样本稀释液二</value>
-  </data>
-  <data name="cmbDiuPos.Items2" xml:space="preserve">
-    <value>样本稀释液三</value>
-  </data>
-  <data name="cmbDiuPos.Items3" xml:space="preserve">
-    <value>样本稀释液四</value>
-  </data>
-  <data name="cmbDiuPos.Items4" xml:space="preserve">
-    <value>样本稀释液五</value>
-  </data>
-  <data name="cmbDiuPos.Items5" xml:space="preserve">
-    <value>样本稀释液六</value>
-  </data>
-  <data name="cmbDiuPos.Items6" xml:space="preserve">
-    <value>Sample dilution 3</value>
-  </data>
-  <data name="cmbDiuPos.Items7" xml:space="preserve">
-    <value />
-  </data>
-  <data name="cmbDiuPos.Items8" xml:space="preserve">
-    <value />
-  </data>
-  <data name="cmbDiuPos.Items9" xml:space="preserve">
-    <value>Sample dilution 4</value>
-  </data>
-  <data name="cmbDiuPos.Items10" xml:space="preserve">
-    <value />
-  </data>
-  <data name="cmbDiuPos.Items11" xml:space="preserve">
-    <value />
-  </data>
-  <data name="cmbDiuPos.Items12" xml:space="preserve">
-    <value>Sample dilution 5</value>
-  </data>
-  <data name="cmbDiuPos.Items13" xml:space="preserve">
-    <value />
-  </data>
-  <data name="cmbDiuPos.Items14" xml:space="preserve">
-    <value />
-  </data>
-  <data name="cmbDiuPos.Items15" xml:space="preserve">
-    <value>Sample dilution 6</value>
-  </data>
-  <data name="cmbDiuPos.Items16" xml:space="preserve">
-    <value />
-  </data>
-  <data name="cmbDiuPos.Location" type="System.Drawing.Point, System.Drawing">
-    <value>106, 77</value>
-  </data>
-  <data name="cmbDiuPos.Size" type="System.Drawing.Size, System.Drawing">
-    <value>97, 20</value>
-  </data>
-  <data name="cmbDiuPos.TabIndex" type="System.Int32, mscorlib">
-    <value>35</value>
-  </data>
-  <data name="&gt;&gt;cmbDiuPos.Name" xml:space="preserve">
-    <value>cmbDiuPos</value>
-  </data>
-  <data name="&gt;&gt;cmbDiuPos.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ComboBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;cmbDiuPos.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;cmbDiuPos.ZOrder" xml:space="preserve">
-    <value>4</value>
-  </data>
-  <data name="label3.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="label3.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="label3.Location" type="System.Drawing.Point, System.Drawing">
-    <value>28, 81</value>
-  </data>
-  <data name="label3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>71, 12</value>
-  </data>
-  <data name="label3.TabIndex" type="System.Int32, mscorlib">
-    <value>34</value>
-  </data>
-  <data name="label3.Text" xml:space="preserve">
-    <value>稀释液位置:</value>
-  </data>
-  <data name="&gt;&gt;label3.Name" xml:space="preserve">
-    <value>label3</value>
-  </data>
-  <data name="&gt;&gt;label3.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;label3.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;label3.ZOrder" xml:space="preserve">
-    <value>5</value>
-  </data>
-  <data name="functionButton1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="fbtnModify.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAQAAAAA6CAYAAABf5IcZAAAABGdBTUEAALGOfPtRkwAAACBjSFJNAACH
         DwAAjA8AAP1SAACBQAAAfXkAAOmLAAA85QAAGcxzPIV3AAAKOWlDQ1BQaG90b3Nob3AgSUNDIHByb2Zp
@@ -343,40 +212,13 @@
         /BszvVKvx5MPAzA7yGZlu5nptv2Pm/MHz+N45ZRT+BMAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="functionButton1.BackgroundImageLayout" type="System.Windows.Forms.ImageLayout, System.Windows.Forms">
-    <value>Stretch</value>
+  <data name="fbtnModify.Location" type="System.Drawing.Point, System.Drawing">
+    <value>457, 23</value>
   </data>
-  <data name="functionButton1.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
-    <value>Flat</value>
+  <data name="fbtnModify.Text" xml:space="preserve">
+    <value>Update</value>
   </data>
-  <data name="functionButton1.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="functionButton1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>146, 141</value>
-  </data>
-  <data name="functionButton1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>57, 27</value>
-  </data>
-  <data name="functionButton1.TabIndex" type="System.Int32, mscorlib">
-    <value>37</value>
-  </data>
-  <data name="functionButton1.Text" xml:space="preserve">
-    <value>解绑</value>
-  </data>
-  <data name="&gt;&gt;functionButton1.Name" xml:space="preserve">
-    <value>functionButton1</value>
-  </data>
-  <data name="&gt;&gt;functionButton1.Type" xml:space="preserve">
-    <value>BioBaseCLIA.CustomControl.FunctionButton, BioBaseCLIA, Version=1.0.0.1, Culture=neutral, PublicKeyToken=null</value>
-  </data>
-  <data name="&gt;&gt;functionButton1.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;functionButton1.ZOrder" xml:space="preserve">
-    <value>2</value>
-  </data>
-  <data name="btnLoadSubstrate.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="fbtnOK.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAQAAAAA6CAYAAABf5IcZAAAABGdBTUEAALGOfPtRkwAAACBjSFJNAACH
         DwAAjA8AAP1SAACBQAAAfXkAAOmLAAA85QAAGcxzPIV3AAAKOWlDQ1BQaG90b3Nob3AgSUNDIHByb2Zp
@@ -440,142 +282,58 @@
         /BszvVKvx5MPAzA7yGZlu5nptv2Pm/MHz+N45ZRT+BMAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="btnLoadSubstrate.BackgroundImageLayout" type="System.Windows.Forms.ImageLayout, System.Windows.Forms">
-    <value>Stretch</value>
+  <data name="fbtnOK.Text" xml:space="preserve">
+    <value>Save</value>
   </data>
-  <data name="btnLoadSubstrate.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
-    <value>Flat</value>
+  <data name="chkEmergency.Location" type="System.Drawing.Point, System.Drawing">
+    <value>345, 34</value>
   </data>
-  <data name="btnLoadSubstrate.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
+  <data name="chkEmergency.Size" type="System.Drawing.Size, System.Drawing">
+    <value>78, 16</value>
   </data>
-  <data name="btnLoadSubstrate.Location" type="System.Drawing.Point, System.Drawing">
-    <value>56, 141</value>
-  </data>
-  <data name="btnLoadSubstrate.Size" type="System.Drawing.Size, System.Drawing">
-    <value>57, 27</value>
-  </data>
-  <data name="btnLoadSubstrate.TabIndex" type="System.Int32, mscorlib">
-    <value>36</value>
-  </data>
-  <data name="btnLoadSubstrate.Text" xml:space="preserve">
-    <value>绑定</value>
-  </data>
-  <data name="&gt;&gt;btnLoadSubstrate.Name" xml:space="preserve">
-    <value>btnLoadSubstrate</value>
-  </data>
-  <data name="&gt;&gt;btnLoadSubstrate.Type" xml:space="preserve">
-    <value>BioBaseCLIA.CustomControl.FunctionButton, BioBaseCLIA, Version=1.0.0.1, Culture=neutral, PublicKeyToken=null</value>
-  </data>
-  <data name="&gt;&gt;btnLoadSubstrate.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;btnLoadSubstrate.ZOrder" xml:space="preserve">
-    <value>3</value>
-  </data>
-  <data name="label1.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="label1.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
+  <data name="chkEmergency.Text" xml:space="preserve">
+    <value>Emergency</value>
   </data>
   <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>40, 115</value>
+    <value>170, 35</value>
   </data>
   <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>59, 12</value>
-  </data>
-  <data name="label1.TabIndex" type="System.Int32, mscorlib">
-    <value>38</value>
+    <value>101, 12</value>
   </data>
   <data name="label1.Text" xml:space="preserve">
-    <value>绑定状态:</value>
+    <value>Dilution Ratio：</value>
   </data>
-  <data name="&gt;&gt;label1.Name" xml:space="preserve">
-    <value>label1</value>
-  </data>
-  <data name="&gt;&gt;label1.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;label1.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;label1.ZOrder" xml:space="preserve">
-    <value>1</value>
-  </data>
-  <data name="label4.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="label4.Font" type="System.Drawing.Font, System.Drawing">
-    <value>微软雅黑, 9pt, style=Bold</value>
-  </data>
-  <data name="label4.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="label4.Location" type="System.Drawing.Point, System.Drawing">
-    <value>106, 113</value>
-  </data>
-  <data name="label4.Size" type="System.Drawing.Size, System.Drawing">
-    <value>44, 17</value>
-  </data>
-  <data name="label4.TabIndex" type="System.Int32, mscorlib">
-    <value>39</value>
-  </data>
-  <data name="label4.Text" xml:space="preserve">
-    <value>未绑定</value>
-  </data>
-  <data name="&gt;&gt;label4.Name" xml:space="preserve">
-    <value>label4</value>
-  </data>
-  <data name="&gt;&gt;label4.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;label4.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;label4.ZOrder" xml:space="preserve">
-    <value>0</value>
-  </data>
-  <data name="$this.Language" type="System.Globalization.CultureInfo, mscorlib">
-    <value>en</value>
-  </data>
-  <data name="$this.Localizable" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>96, 96</value>
-  </data>
-  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>259, 223</value>
-  </data>
-  <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>768, 192, 768, 192</value>
+  <data name="groupBox1.Text" xml:space="preserve">
+    <value>Information Modification</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>绑定稀释液</value>
+    <value>Run Information Modify</value>
   </data>
-  <data name="&gt;&gt;$this.Name" xml:space="preserve">
-    <value>frmLoadDiu</value>
+  <data name="keywordText.Cancel" xml:space="preserve">
+    <value>Cancel</value>
   </data>
-  <data name="&gt;&gt;$this.Type" xml:space="preserve">
-    <value>BioBaseCLIA.frmSmallParent, BioBaseCLIA, Version=1.0.0.1, Culture=neutral, PublicKeyToken=null</value>
+  <data name="keywordText.Control" xml:space="preserve">
+    <value>Control</value>
   </data>
-  <data name="keywordText.BindingSuccee" xml:space="preserve">
-    <value>绑定稀释液信息成功！</value>
+  <data name="keywordText.InsufficientDilute" xml:space="preserve">
+    <value>{0} diluent is not enough！</value>
   </data>
-  <data name="keywordText.Bound" xml:space="preserve">
-    <value>已绑定</value>
+  <data name="keywordText.No" xml:space="preserve">
+    <value>No</value>
   </data>
-  <data name="keywordText.BoundDiluent" xml:space="preserve">
-    <value>绑定稀释液</value>
+  <data name="keywordText.PleaseChooseSampleNeededModify" xml:space="preserve">
+    <value>Please select the sample to be modified！</value>
   </data>
-  <data name="keywordText.UnbindSuccess" xml:space="preserve">
-    <value>稀释液信息成功解绑！</value>
+  <data name="keywordText.Standard" xml:space="preserve">
+    <value>Standard</value>
   </data>
-  <data name="keywordText.Unbound" xml:space="preserve">
-    <value>未绑定</value>
+  <data name="keywordText.Update" xml:space="preserve">
+    <value>Update</value>
   </data>
-  <data name="keywordText.Unbundling" xml:space="preserve">
-    <value>解绑稀释液</value>
+  <data name="keywordText.UpdateRunningInfomation" xml:space="preserve">
+    <value>Run Information Modify</value>
+  </data>
+  <data name="keywordText.Yes" xml:space="preserve">
+    <value>Yes</value>
   </data>
 </root>
