--- a/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/frmLogin.en.resx
+++ b/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/frmLogin.en.resx
@@ -564,7 +564,7 @@
     <value>User </value>
   </data>
   <data name="UsernameErr" xml:space="preserve">
-    <value>The username is incorrect, please re-enter!</value>
+    <value>The information is incorrect, please re-enter!</value>
   </data>
   <data name="cbLanguage.Items" xml:space="preserve">
     <value>Chinese</value>
