--- a/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmTestResult.en.resx
+++ b/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmTestResult.en.resx
@@ -151,6 +151,13 @@
   <data name="Result.HeaderText" xml:space="preserve">
     <value>sign</value>
   </data>
+  <data name="ResultDatetime.HeaderText" xml:space="preserve">
+    <value>ResultDatetime</value>
+  </data>
+  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="ResultDatetime.Visible" type="System.Boolean, mscorlib">
+    <value>False</value>
+  </data>
   <data name="fbtnTestResult.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAQAAAAA6CAYAAABf5IcZAAAABGdBTUEAALGOfPtRkwAAACBjSFJNAACH
@@ -500,9 +507,6 @@
   </data>
   <data name="btnLoadReagent.Text" xml:space="preserve">
     <value>Reagent Load</value>
-  </data>
-  <data name="groupBox1.Text" xml:space="preserve">
-    <value>Data operation</value>
   </data>
   <data name="functionButton1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -996,6 +1000,9 @@
   </data>
   <data name="fbtnSaveResult.Text" xml:space="preserve">
     <value>Save results</value>
+  </data>
+  <data name="groupBox1.Text" xml:space="preserve">
+    <value>Data operation</value>
   </data>
   <data name="$this.Font" type="System.Drawing.Font, System.Drawing">
     <value>Times New Roman, 9pt</value>
