核对了中英文字符串缺少部分，修改了不对应的字符串

--- a/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/SysMaintenance/frmInstruMaintenance.en.resx
+++ b/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/SysMaintenance/frmInstruMaintenance.en.resx
@@ -1819,4 +1819,7 @@
   <data name="txtWashPipeline.Text" xml:space="preserve">
     <value>1</value>
   </data>
+  <data name="$this.Text" xml:space="preserve">
+    <value>frmInstruMaintenance</value>
+  </data>
 </root>
